2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/ab-window.c (balsa_ab_window_new): use header bar in
	dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/ab-main.c (ab_warning): use header bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* libbalsa/smtp-server.c (libbalsa_smtp_server_dialog): use a
	header bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* libbalsa/send.c (ensure_send_progress_dialog): use a header
	bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* libbalsa/rfc3156.c (check_gpg_child): use a header bar in
	dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bars

	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_select_key),
	(lb_gpgme_accept_low_trust_key), (get_passphrase_real): use
	header bars in dialogs.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use GtkDialog API and GTK_DIALOG_* flags instead of g_object_new
	and GObject properties

	* src/filter-edit-dialog.c (filters_edit_dialog):
	* src/filter-export-dialog.c (filters_export_dialog):
	* src/sendmsg-window.c (subject_not_empty):
	* src/toolbar-prefs.c (customize_dialog_cb):

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa.c (ask_cert_real), (ask_timeout_real): use
	header bars.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/misc.c (libbalsa_create_grid_entry): set hexpand on
	the entry.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bars in identity dialogs

	* libbalsa/identity.c (libbalsa_identity_select_dialog),
	(delete_ident_cb), (libbalsa_identity_config_dialog): use header
	bars.
	(append_ident_notebook_page), (setup_ident_frame): remove
	redundant argument.

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>
